# osh_demo

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  inference_driver.yaml  inference_driver_pod.yaml  inference_driver_without_npu.yaml
camera/: CMakeLists.txt
camera/src/: camera_overlay.cpp
comm/: CMakeLists.txt
comm/src/: ipc_protocol.hpp  shm_ring.cpp  shm_ring.hpp  uds_dgram.cpp  uds_dgram.hpp
inference/: CMakeLists.txt  build_standalone.sh  run.sh
inference/src/: inference_driver.cpp  inference_driver_standalone.cpp  util.cpp  util.hpp
